--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -1,5 +1,5 @@
 server.port=9001
-eureka.client.service-url.defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+eureka.client.service-url.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
 eureka.instance.prefer-ip-address=true
 zuul.prefix=/api
 management.security.enabled=false
