--- a/football-service.properties
+++ b/football-service.properties
@@ -1,4 +1,3 @@
+message=Spring cloud config: Football Service 
 server.port=9003
-eureka.client.service-url.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
-eureka.instance.prefer-ip-address=true
 management.security.enabled=false
